fixing spacing

--- a/public/css/my.less
+++ b/public/css/my.less
@@ -218,7 +218,7 @@ body {
     //padding-right: 15px;
 
     /* Extra Small Devices, Phones */
-    margin-top: 15px;
+    //margin-top: 15px;
     @media only screen and (min-width : 320px) {
 
     }
@@ -236,11 +236,11 @@ body {
 
     /* Medium Devices, Desktops */
     @media only screen and (min-width : 992px) {
-        margin-top: 0;
+        //margin-top: 0;
     }
 
     @media only screen and (min-width : 1200px) {
-        margin-top: 0;
+        //margin-top: 0;
     }
 
 
@@ -267,6 +267,8 @@ body {
         background-color: @color;
 
     }
+
+
 
 
 }
@@ -315,7 +317,8 @@ body {
 
     /* Medium Devices, Desktops */
     @media only screen and (min-width : 992px) {
-
+        padding-bottom: 8px;
+        padding-top: 8px;
     }
 
     /* Large Devices, Wide Screens */
@@ -336,6 +339,8 @@ body {
             font-size: 0.875em;
 
         }
+
+
     }
 
 
